syntax = "proto3";
option java_package = "cpen431.mp.ProtocolBuffers";
option java_outer_classname = "PoPReply";

message PReply {
    uint32 errCode = 1;
    uint32 exitCode = 2;
    string commandOutput = 3;
    string jarMD5 = 4;
}